# self-referencing-crate

./: Cargo.toml
crates/deps-tests/: Cargo.toml
crates/deps-tests/src/: main.rs
crates/implementation/src/: lib.rs
