[package]
name = "deps-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
new_client = { git = "https://github.com/osiewicz/self-referencing-crate.git", package = "implementation" }
old_client = { git = "https://github.com/osiewicz/self-referencing-crate.git", tag = "stable", package = "implementation" }
